...
        }
    }

    override func viewDidLoad() {
        super.viewDidLoad()
        
        self.title = "Star Wars"

        self.loadData()
    }

    // MARK: - Table view data source

...
